Refactor: 필요없는 import제거, 사용되지않는 메소드 제거
#288